--- a/src/assets/css/default.scss
+++ b/src/assets/css/default.scss
@@ -5,10 +5,10 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  .button-content {
+  .text-button-content {
     margin: 10px;
   }
-  .image-content {
+  .icon-button-content {
     margin: 10px;
   }
 }
