--- a/src/assets/css/button.scss
+++ b/src/assets/css/button.scss
@@ -11,9 +11,10 @@
   box-sizing: border-box;
 }
 
-.button-content {
+
+.text-button-content {
   @include baseButton;
-  
+
   font-size: 16px;
   min-width: 76px;
   min-height: 36px;
@@ -44,4 +45,83 @@
   &.prevent-hover {
     cursor: unset;
   }
+}
+
+.icon-button-content {
+  @include baseButton;
+
+  .icon-content {
+    width: 20px;
+    height: 20px;
+  }
+
+  min-width: 24px;
+  min-height: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+
+  //&.small {
+  //  font-size: 11px;
+  //  min-width: 53px;
+  //  min-height: 24px;
+  //}
+
+  &.large {
+    font-size: 16px;
+    min-width: 36px;
+    min-height: 36px;
+    svg {
+      polygon {
+        width: 12px;
+        height: 7px;
+      }
+    }
+
+    svg {
+      path {
+        width: 12px;
+        height: 7px;
+      }
+    }
+
+  }
+
+  &.outlined {
+    border: 1px solid #dde1e6;
+  }
+
+  &:hover {
+    opacity: 0.4;
+    cursor: pointer;
+  }
+
+  &.prevent-hover {
+    opacity: unset;
+    cursor: unset;
+  }
+
+  &:active {
+    opacity: 0.8;
+    cursor: pointer;
+  }
+
+  &.dark-mode {
+    background-color: #1e2637;
+    border: solid 1px #ffffff;
+
+    svg {
+      polygon {
+        fill: #ffffff;
+      }
+    }
+
+    svg {
+      path {
+        fill: #ffffff;
+      }
+    }
+  }
+
 }
