--- a/src/assets/css/button.scss
+++ b/src/assets/css/button.scss
@@ -12,6 +12,7 @@
 }
 
 
+
 .text-button-content {
   @include baseButton;
 
@@ -36,6 +37,10 @@
 
   &.disabled {
     opacity: 0.4;
+  }
+
+  &.outlined {
+    border: none;
   }
 
   &:hover {
@@ -63,8 +68,16 @@
     }
   }
 
+  &.small {
+    min-width: 24px;
+    min-height: 24px;
+
+    img {
+      width: 24px;
+      height: 24px;
+    }
+  }
   &.large {
-    font-size: 16px;
     min-width: 36px;
     min-height: 36px;
 
@@ -97,7 +110,6 @@
     background-color: #1e2637;
     border: solid 1px #ffffff;
   }
-
 }
 
 .icon-text-button-content {
@@ -119,6 +131,17 @@
     }
   }
 
+  &.small {
+    font-size: 16px;
+    font-weight: normal;
+    width: 92px;
+    height: 36px;
+
+    img {
+      height: 18px;
+      width: 18px;
+    }
+  }
   &.regular {
     font-size: 16px;
     font-weight: normal;
@@ -213,4 +236,5 @@ button.white-outline:active {
   border: solid 1px rgba(255, 255, 255, 0.4) !important;
   opacity: 0.1 !important;
 }
+
 
